--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.a210311_btobdigitaleconomy">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
-        android:icon="@drawable/google"
+        android:icon="@drawable/google2"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/google"
+        android:roundIcon="@drawable/google2"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon,android:theme">
-        <activity android:name=".SignInActivity"></activity>
+        <activity android:name=".HomeDashboard"></activity>
+        <activity android:name=".ListActivityTemp" />
+        <activity android:name=".InsertTemp" />
+        <activity android:name=".SignInActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
