--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon,android:theme">
-        <activity android:name=".GetStartedActivity"></activity>
+        <activity android:name=".AboutActivity"></activity>
+        <activity android:name=".GetStartedActivity" />
         <activity android:name=".LearnMoreActivity" />
         <activity android:name=".HomeDashboard" />
         <activity android:name=".ListActivityTemp" />
