--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,12 @@
         <activity android:name=".GetStartedActivity" />
         <activity android:name=".LearnMoreActivity" />
         <activity android:name=".HomeDashboard" />
-        <activity android:name=".ListActivityTemp" />
+
         <activity android:name=".InsertTemp" />
         <activity android:name=".SignInActivity" />
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
